--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,22 @@ main#main-doc {
   margin-left: 300px;
   padding: 30px;
 }
+
+@media (max-width: 530px) {
+  body {
+    background-color: lightblue;
+    display: block;
+  }
+
+  nav#navbar {
+    position: relative;
+    max-width: 200px;
+    margin: 0 auto;
+  }
+
+  main#main-doc {
+    text-align: justify;
+    padding: 30px;
+    margin: 0 auto;
+  }
+}
